# grasping

./: README.md
grasp_planning/: CMakeLists.txt  package.xml
grasp_planning/config/: params.yaml
grasp_planning/include/grasp_planning/: GraspPlanningAction.h
grasp_planning/launch/: grasp_planning.launch
grasp_planning/scripts/: move_group_test.py
grasp_planning/src/: GraspPlanningAction.cpp
grasping_pipeline/: CMakeLists.txt  package.xml  package.xml~
grasping_pipeline/include/grasping_pipeline/: GraspingPipeline.h  GraspingPipeline.h~
grasping_pipeline/launch/: grasping_pipeline_gazebo.launch
grasping_pipeline/src/: GraspingPipeline.cpp
ist_grasp_generation/ist_generate_grasp_candidates/: CMakeLists.txt  manifest.xml  package.xml
ist_grasp_generation/ist_generate_grasp_candidates/config/: config.yaml
ist_grasp_generation/ist_generate_grasp_candidates/include/grasp/: grasp.h
ist_grasp_generation/ist_generate_grasp_candidates/include/grip/: grip.h
ist_grasp_generation/ist_generate_grasp_candidates/src/grasp/: grasp.cpp
ist_grasp_generation/ist_generate_grasp_candidates/src/grip/: grip.cpp
ist_grasp_generation/ist_generate_grasp_candidates/src/ros_generate_grasps_action_server/: ros_generate_grasps_action_server.cpp
ist_grasp_generation/ist_generate_grasps/: manifest.xml
ist_grasp_generation/ist_generate_grasps/launch/: generate_grasps_real.launch  generate_grasps_sim.launch
ist_grasp_generation/ist_generate_grasps/scripts/: generate_grasps_server.py  generate_trajectories_server.py
ist_grasp_generation/ist_grasp_candidate_list_manager/: CMakeLists.txt  manifest.xml  package.xml
ist_grasp_generation/ist_grasp_candidate_list_manager/include/grasp_candidate_list_manager/: grasp_candidate_list_manager.h
ist_grasp_generation/ist_grasp_candidate_list_manager/src/grasp_candidate_list_manager/: grasp_candidate_list_manager.cpp
ist_grasp_generation/ist_grasp_generation_msgs/: CMakeLists.txt  manifest.xml  package.xml
ist_grasp_generation/ist_grasp_generation_msgs/action/: GenerateGrasps.action  GenerateTrajectories.action
ist_grasp_generation/ist_grasp_generation_msgs/srv/: AddObjectCollision.srv
ist_grasp_generation/ist_grasping_point_prediction/: CMakeLists.txt  CMakeLists.txt~  manifest.xml  package.xml
ist_grasp_generation/ist_grasping_point_prediction/src/: grasping_point_prediction.cpp
ist_msgs/: CMakeLists.txt~  manifest.xml  package.xml~
ist_msgs/msg/: ObjectData.msg  ObjectState.msg
