<?xml version="1.0"?>
<package>
  <name>grasping_point_prediction</name>
  <version>0.0.0</version>
  <description>grasping_point_prediction</description>
  <maintainer email="ruifigueiredo@isr.ist.utl.pt">Rui P. de Figueiredo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ist_grasp_generation_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>opencv2</build_depend>

  <run_depend>ist_grasp_generation_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>opencv2</run_depend>

</package>



